<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Applace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="como_funciona">Cómo funciona</string>
    <string name="condiciones">Condiciones del servicio</string>
    <string name="politica">Política de privacidad</string>
    <string name="ayuda">Ayuda</string>
    <string name="imgdesc">imgdesc</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
     <string name="app_id">679460882134389</string>
	<string name="login">Log In</string>
	<string name="logout">Log Out</string>
	<string name="login_intro">Ingresa a Applace, haciendo click en el botón de abajo!</string>
	<string name="location">Ubicación</string>
	<string name="gender">Sexo</string>
	<string name="date_of_birth">Cumpleaños</string>
	<string name="relationship">Relación</string>
	<string name="share">Ir al Mapa</string>
    <string name="action_edit">Editar</string>
    <string name="action_config">Configurar</string>
    <string name="action_update">Actualizar</string>
    <string name="action_share">Compartir</string>
    <string name="action_camara">Cámara</string>
    <string name="action_delete">Borrar</string>
    <string name="action_new">Nuevo mensaje</string>
    <string name="action_fav">Favorito</string>
    <string name="action_fav_no">No favorito</string>
    <string name="vis_comentario">Casa muy linda. 
        Queda a pasos de la playa y es muy comoda para una familia numerosa. 
        Tiene todas las características que se describen y mucho más.</string>
        
    <string name="reportar_link"><u>Reportar este alojamiento</u></string>
    <string name="ver_disp"><u>Ver disponibilidad</u></string>
    <string name="find">Find</string>
    <string name="hint">Enter Place</string>
    
    <string name="picture">Picture</string>
	<string name="select_intro">Long-press a thumbnail to add an image</string>
	<string name="show_intro">Press a thumbnail to display at larger size</string>
    
    <array name="icons">
        <item>@drawable/ic_slide</item>
        <item>@drawable/ic_action_search</item>
    </array>

</resources>
