<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sgoliver="http://schemas.android.com/apk/res-auto" 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.retni.applacegps.MainActivity" >
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search" />
    
    <item
        android:id="@+id/como_funciona"
        android:orderInCategory="100"
        android:title="@string/como_funciona"
        app:showAsAction="never" />
    <item
        android:id="@+id/codiciones"
        android:orderInCategory="100"
        android:title="@string/condiciones"
        app:showAsAction="never"/>
    <item
        android:id="@+id/politica"
        android:orderInCategory="100"
        android:title="@string/politica"
        app:showAsAction="never"/>
    <item
        android:id="@+id/ayuda"
        android:orderInCategory="100"
        android:title="@string/ayuda"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit" />
    
    <item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_config"
        android:title="@string/action_config" />
    
    <item
        android:id="@+id/action_update"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_actualizar"
        android:title="@string/action_update" />
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share" />
    
    <item
        android:id="@+id/action_camara"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_device_access_camera"
        android:title="@string/action_camara" />
    
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        sgoliver:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_content_discard"
        android:title="@string/action_delete" />

</menu>
